# week21cpp2021-safearray

./: .gitignore  Notes.md  README.md  inline-color.css
src/: CMakeLists.txt
src/safearray/: fast_safe_array.hpp  main.cpp  safe_array.hpp
